Initial ‹dia-glitch› element (#4)

--- a/demos/index.html
+++ b/demos/index.html
@@ -15,6 +15,7 @@
   <main>
     <ul>
       <li><a href="slideshow.html">slideshow/dia-{show,slide,po,speaker}</a></li>
+      <li><a href="dia-glitch.html">slideshow/dia-glitch</a></li>
     </ul>
   </main>
 </body>
