--- a/demos/dia-glitch.html
+++ b/demos/dia-glitch.html
@@ -16,13 +16,13 @@
   </header>
 
   <main>
-    <dia-show>
+    <dia-show slide="s02">
       <dia-slide id="s01">
         <dia-po display="proj01"><dia-glitch project="power-asteroid" mode="editor" file="index.html"></dia-glitch></dia-po>
         <dia-po display="tv01"><dia-glitch project="power-asteroid" mode="preview" file="index.html"></dia-glitch></dia-po>
       </dia-slide>
       <dia-slide id="s02">
-        <dia-po display="proj01"><dia-glitch project="power-asteroid" mode="app"></dia-glitch></dia-po>
+        <dia-po display="proj01"><dia-glitch project="power-asteroid" mode="app" refresh=5000></dia-glitch></dia-po>
         <dia-po display="tv01">
           <p>Some texte next to the running app (which does not receive
             live updates from the editor)</p></dia-po>
