Renames ‹dia-glitch› element and package to ‹dia-livecode› (#4)

--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>@petitatelier/slideshow demo catalog</title>
+  <title>@petitatelier/slideshow elements catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="demo-components.css">
 </head>
@@ -10,12 +10,12 @@
   <noscript>Please enable JavaScript to view this website.</noscript>
 
   <header>
-    <span>@petitatelier/slideshow demo catalog</span>
+    <span>@petitatelier/slideshow elements catalog</span>
   </header>
   <main>
     <ul>
-      <li><a href="slideshow.html">slideshow/dia-{show,slide,po,speaker}</a></li>
-      <li><a href="dia-glitch.html">slideshow/dia-glitch</a></li>
+      <li><a href="slideshow.html">slideshow/dia-{show,slide,po}</a></li>
+      <li><a href="dia-livecode.html">slideshow/dia-livecode</a></li>
     </ul>
   </main>
 </body>
