--- a/demos/slideshow.html
+++ b/demos/slideshow.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>@petitatelier/slideshow elements demo</title>
+  <title>@petitatelier/dia-{show,slide,po} elements demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="stylesheet" href="demo-components.css">
@@ -12,7 +12,7 @@
 
   <header>
     <a href="index.html">Catalog</a>
-    <span> › Elements ‹dia-*›</span>
+    <span> › Elements ‹dia-show›, ‹dia-slide› and ‹dia-po›</span>
   </header>
 
   <main>
