--- a/demos/dia-livecode.html
+++ b/demos/dia-livecode.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>@petitatelier/slideshow elements demo</title>
+  <title>@petitatelier/dia-livecode element demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="stylesheet" href="demo-components.css">
@@ -12,17 +12,17 @@
 
   <header>
     <a href="index.html">Catalog</a>
-    <span> › Element ‹dia-glitch›</span>
+    <span> › Element ‹dia-livecode›</span>
   </header>
 
   <main>
-    <dia-show slide="s02">
+    <dia-show slide="s01">
       <dia-slide id="s01">
-        <dia-po display="proj01"><dia-glitch project="power-asteroid" mode="editor" file="index.html"></dia-glitch></dia-po>
-        <dia-po display="tv01"><dia-glitch project="power-asteroid" mode="preview" file="index.html"></dia-glitch></dia-po>
+        <dia-po display="proj01"><dia-livecode project="power-asteroid" mode="editor" file="index.html"></dia-livecode></dia-po>
+        <dia-po display="tv01"><dia-livecode project="power-asteroid" mode="preview" refresh=7500></dia-livecode></dia-po>
       </dia-slide>
       <dia-slide id="s02">
-        <dia-po display="proj01"><dia-glitch project="power-asteroid" mode="app" refresh=5000></dia-glitch></dia-po>
+        <dia-po display="proj01"><dia-livecode project="power-asteroid" mode="embed" file="index.html"></dia-livecode></dia-po>
         <dia-po display="tv01">
           <p>Some texte next to the running app (which does not receive
             live updates from the editor)</p></dia-po>
@@ -31,7 +31,7 @@
   </main>
 
   <script type="module" src="../node_modules/@petitatelier/slideshow/index.js"></script>
-  <script type="module" src="../node_modules/@petitatelier/dia-glitch/dia-glitch.js"></script>
+  <script type="module" src="../node_modules/@petitatelier/dia-livecode/dia-livecode.js"></script>
   <script>
     addEventListener( "load", () => document.body.classList.remove( "unresolved"));
   </script>
