Renames ‹slideshow› package to ‹dia-show› and removes ‹dia-speaker› element (#3)

--- a/demos/index.html
+++ b/demos/index.html
@@ -14,8 +14,8 @@
   </header>
   <main>
     <ul>
-      <li><a href="slideshow.html">slideshow/dia-{show,slide,po}</a></li>
-      <li><a href="dia-livecode.html">slideshow/dia-livecode</a></li>
+      <li><a href="dia-show.html">@petitatelier/dia-{show,slide,po}</a></li>
+      <li><a href="dia-livecode.html">@petitatelier/dia-livecode</a></li>
     </ul>
   </main>
 </body>
