Adds dia-controller and clickable slides

--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -17,6 +17,7 @@
 
   <main>
     <dia-show slide="s01" display="proj01">
+      <dia-controller></dia-controller>
       <dia-slide id="s01">
         <dia-po display="proj01"></dia-po>
         <dia-po display="tv01"></dia-po>
