Factors out keyboard event listeners to module `dia-controller-keyboard` (#5)

--- a/demos/dia-livecode.html
+++ b/demos/dia-livecode.html
@@ -16,6 +16,7 @@
   </header>
 
   <main>
+    <dia-controller></dia-controller>
     <dia-show slide="s01">
       <dia-slide id="s01">
         <dia-po display="proj01"><dia-livecode project="power-asteroid" mode="editor" file="index.html"></dia-livecode></dia-po>
