Adds `default` attribute to ‹dia-po› and improves comments describing properties/attributes of all elements (#3)

--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -21,20 +21,20 @@
       <dia-slide id="s01">
         <dia-po display="proj01"></dia-po>
         <dia-po display="tv01"></dia-po>
-        <dia-po display="tv02"></dia-po>
+        <dia-po display="tv02" default></dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
       </dia-slide>
       <dia-slide id="s02">
         <dia-po display="proj01"></dia-po>
         <dia-po display="tv01"></dia-po>
-        <dia-po display="tv02"></dia-po>
+        <dia-po display="tv02" default></dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
       </dia-slide>
       <dia-slide id="s03">
         <dia-po display="proj01"></dia-po>
-        <dia-po display="tv01"></dia-po>
+        <dia-po display="tv01" default></dia-po>
         <dia-po display="tv02"></dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
