Restructurates controllers (keyboard and remote)

--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -17,7 +17,7 @@
 
   <main>
     <dia-show slide="s01" display="proj01">
-      <dia-controller></dia-controller>
+      <dia-controller-remote live-id="webcomponents-primer"></dia-controller-remote>
       <dia-slide id="s01">
         <dia-po display="proj01"></dia-po>
         <dia-po display="tv01"></dia-po>
@@ -42,6 +42,8 @@
     </dia-show>
   </main>
 
+
+  <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
   <script type="module" src="../node_modules/@petitatelier/dia-show/index.js"></script>
   <script>
     addEventListener( "load", () => document.body.classList.remove( "unresolved"));
