Adds display in head and liveHead

--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -16,27 +16,34 @@
   </header>
 
   <main>
-    <dia-show slide="s01" display="proj01">
+    <dia-show slide="s01" display="tv02">
       <dia-slide id="s01">
-        <dia-po display="proj01"></dia-po>
+        <dia-po display="proj01"><h1>This is slide `s01` displayed on `proj01`</h1></dia-po>
         <dia-po display="tv01"></dia-po>
-        <dia-po display="tv02" default></dia-po>
+        <dia-po display="tv02" default>Default s01 diapo on tv02</dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
       </dia-slide>
       <dia-slide id="s02">
-        <dia-po display="proj01"></dia-po>
+        <dia-po display="proj01"><h1>This is slide `s02` displayed on `proj01`</h1></dia-po>
         <dia-po display="tv01"></dia-po>
-        <dia-po display="tv02" default></dia-po>
+        <dia-po display="tv02" default>Default s02 diapo on tv02</dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
       </dia-slide>
       <dia-slide id="s03">
-        <dia-po display="proj01"></dia-po>
-        <dia-po display="tv01" default></dia-po>
+        <dia-po display="proj01"><h1>This is slide `s03` displayed on `proj01`</h1></dia-po>
+        <dia-po display="tv01" default>Default s03 diapo on tv01</dia-po>
         <dia-po display="tv02"></dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
+      </dia-slide>
+      <dia-slide id="s04">
+        <dia-po display="proj01"><h1>This is slide `s04` displayed on `proj01`</h1></dia-po>
+        <dia-po display="tv01"></dia-po>
+        <dia-po display="tv02"></dia-po>
+        <dia-po display="pres01"></dia-po>
+        <dia-po display="pres02" default>Default s04 diapo on `pres02`</dia-po>
       </dia-slide>
     </dia-show>
   </main>
