--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -18,8 +18,13 @@
   <main>
     <dia-show slide="s01" display="tv02">
       <dia-slide id="s01">
-        <dia-po display="proj01"><h1>This is slide `s01` displayed on `proj01`</h1></dia-po>
-        <dia-po display="tv01"></dia-po>
+        <dia-po display="proj01">
+          <h1>This is slide `s01` displayed on `proj01`</h1>
+          <p>Some text</p>
+        </dia-po>
+        <dia-po display="tv01">
+          <p>Some more text</p>
+        </dia-po>
         <dia-po display="tv02" default>Default s01 diapo on tv02</dia-po>
         <dia-po display="pres01"></dia-po>
         <dia-po display="pres02"></dia-po>
