--- a/demos/dia-livecode.html
+++ b/demos/dia-livecode.html
@@ -29,9 +29,9 @@
     </dia-show>
   </main>
 
-  <script type="module" src="../node_modules/@petitatelier/dia-show/index.js"></script>
-  <script type="module" src="../node_modules/@petitatelier/dia-livecode/dia-livecode.js"></script>
-  <script type="module" src="../node_modules/@petitatelier/dia-code/dia-code.js"></script>
+  <script type="module" src="../node_modules/@petitatelier/dia-show/dist/index.es.js"></script>
+  <script type="module" src="../node_modules/@petitatelier/dia-livecode/dist/dia-livecode.es.js"></script>
+  <script type="module" src="../node_modules/@petitatelier/dia-code/dist/dia-code.es.js"></script>
   <script>
     addEventListener( "load", () => document.body.classList.remove( "unresolved"));
   </script>
