--- a/demos/dia-show.html
+++ b/demos/dia-show.html
@@ -55,7 +55,7 @@
 
 
   <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
-  <script type="module" src="../node_modules/@petitatelier/dia-show/index.js"></script>
+  <script type="module" src="../node_modules/@petitatelier/dia-show/dist/index.es.js"></script>
   <script>
     addEventListener( "load", () => document.body.classList.remove( "unresolved"));
   </script>
